<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="@string/category" />

        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_baseline_local_offer_24"
            android:title="@string/offers" />

        <item
            android:id="@+id/nav_new_products"
            android:icon="@drawable/ic_baseline_autorenew_24"
            android:title="@string/new_products" />

        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/orders" />

        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/ic_baseline_add_shopping_cart_24"
            android:title="@string/my_cart" />
    </group>
</menu>